noinst_PROGRAMS = test-list test-multilist
LDADD = $(top_builddir)/src/pobj/libpobj.a $(top_builddir)/src/lladd/liblladd.a \
	$(top_builddir)/src/pbl/libpbl.a $(top_builddir)/src/libdfa/librw.a
CLEANFILES = storefile.txt logfile.txt blob0_file.txt blob1_file.txt
AM_CFLAGS= -g -Wall -pedantic -std=gnu99

