if(HAVE_GETLINE)
if(BISON_EXECUTABLE)
if(NEW_ENOUGH_FLEX)
SUBDIRS(lang)
ADD_LIBRARY(referential algebra.c dml.c ddl.c tuple.c lang/ast.c)
TARGET_LINK_LIBRARIES(referential ${COMMON_LIBRARIES})
SET(COMMON_LIBRARIES referential refparse ${COMMON_LIBRARIES})
  CREATE_CHECK_OPT(toplevel ${CMAKE_CURRENT_SOURCE_DIR}/test-script.ref)
endif(NEW_ENOUGH_FLEX)
endif(BISON_EXECUTABLE)
endif(HAVE_GETLINE)
